--- a/now.json
+++ b/now.json
@@ -1,12 +1,12 @@
 {
   "version": 2,
-  "name": "express",
+  "name": "<%= name %>",
   "builds": [
     {
       "src": "**/*.js",
       "use": "@now/node",
       "config": {
-        "maxLambdaSize": "10mb"
+        "maxLambdaSize": "<%= now_max_lambda_size %>"
       }
     }
   ],
